--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Key Party</title>
+    <title>Low Key</title>
     <script src="lib/phaser.js"></script>
     <script src="src/main.js"></script>
 </head>
